--- a/versions/latest.css
+++ b/versions/latest.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 .theme-light:root {
   --synqats-gb-bg-0: var(--synqats-gb-bg-0-light);
   --synqats-gb-bg-1: var(--synqats-gb-bg-1-light);
